<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_edittext"
    tools:context="com.thomas.mirakle.hospital.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <AutoCompleteTextView
            android:id="@+id/username"
            android:layout_width="336dp"
            android:layout_height="53dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="120dp"
            android:layout_weight="1"
            android:layout_x="87dp"
            android:layout_y="194dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:fontFamily="casual"
            android:hint="@string/username"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_layout">

        <EditText
            android:id="@+id/password"
            android:layout_width="336dp"
            android:layout_height="53dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="270dp"
            android:layout_weight="1"
            android:layout_x="87dp"
            android:layout_y="261dp"
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:fontFamily="casual"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_x="214dp"
        android:layout_y="355dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/register_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_x="75dp"
        android:layout_y="355dp"
        android:background="@drawable/rounded_edittext"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/password_layout" />

    <Button
        android:id="@+id/buttontry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="28dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</android.support.constraint.ConstraintLayout>
