<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thomas.mirakle.hospital.editpage">

    <Button
        android:id="@+id/update_db_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/address_update"
        android:layout_below="@+id/address_update"
        android:layout_marginTop="26dp"
        android:text="update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/tablename"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView2"
        android:layout_marginEnd="46dp"
        android:entries="@array/all_member"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="96dp"
        android:layout_toStartOf="@+id/user_list_spinner"
        android:text="Select-User"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/user_list_spinner"
        android:layout_width="208dp"
        android:layout_height="48dp"
        android:layout_alignStart="@+id/tablename"
        android:layout_below="@+id/tablename"
        android:layout_marginTop="28dp"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="147dp" />

    <ImageButton
        android:id="@+id/reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tablename"
        android:layout_toEndOf="@+id/user_list_spinner"
        app:srcCompat="@android:drawable/stat_notify_sync_noanim" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_list_spinner"
        android:layout_marginBottom="12dp"
        android:layout_toStartOf="@+id/user_list_spinner"
        android:text="select_user_id" />

    <EditText
        android:id="@+id/name_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tablename"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/password_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name_update"
        android:layout_below="@+id/name_update"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/address_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/password_update"
        android:layout_below="@+id/password_update"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/user_list_spinner"
        android:layout_toEndOf="@+id/user_list_spinner"
        app:srcCompat="@android:drawable/ic_popup_sync" />
</RelativeLayout>
